--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,5 +99,5 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": ["./src/**/*"],
-  "exclude": ["node_modules", "**/*.test.tsx"]
+  "exclude": ["node_modules"]
 }
