--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^6.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-scripts": "5.0.1",
     "tw-elements": "^1.0.0-alpha12",
     "typescript": "^4.6.4"
